# cam3d

./: CMakeLists.txt  Design Decisions.md  README.md
.github/workflows/: build_and_run_tests.yml
src/: BackendFunctions.hpp  BackendTypes.hpp
src/Controllers/: Projection_Perspective.hpp
src/Data/: Camera.hpp  Projection.hpp  Projection_Orthographic.hpp  Projection_Perspective.hpp  View.hpp
tests/: CMakeLists.txt  tests.cpp
